
0.108     2010-10-15

          simple (stringwise) comparison should now be much faster (thanks,
          NCLEATON)

0.107     2009-10-28

          New maintainer:  Ricardo Signes (rjbs)

          On 5.10.0 and newer perl, install to the "site" directory, not the
          core perl directory in @INC.  (Prior to 5.10.0, @INC ordering was
          unfortunate, and fixing the install target would make upgrading
          difficult.)

          cope with new stringification of qr{} objects in 5.13.x+ (thanks,
          ANDK)

          fix Pod escaping errors (thanks, FWIE)

0.106

          Release after dev.

0.105-dev

          Fix for perl 5.010.1 - the code to check the version and act
          correctly on regexp refs treated .1 as behaving like 5.011.

0.104

          Document behaviour of cmp_bag when a non ARRAY-ref argument is passed
          to it. Explicity test for this a die with a useful message.

          Document and export cmp_details and deep_diag, thanks to Tom Hukins
          for the patch.

0.103

          Detect whether isa() is being called with 1 or 2 arguments and
          dispatch to the correct function. This is hacky but fixes the problem
          of clashing with UNIVERSAL::isa().

0.102

          Behave well when a code comparator doesn't give diagnostics. Thanks
          to Alex Kapranoff.

0.101

          Fix an overloading problem with All and Any. Thanks to Kostas
          Chatzikokolakis for reporting the bug and especially for explaining
          how to fix it :)

          Added a nasty hack to smooth over a problem in Test::Tester.

0.100

          Apply patch from Andreas Koenig (ANDK) to cope with Perl 5.11's new
          REGEXP objects.

0.099

          Don't explode on perl's that don't have weakrefs. If they're not
          available, just don't weaken the refs. It means refs can be cached
          for longer than desirable but it's better than explodiing.
